--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <body>
     <ul>
       <li><a href="01_navmesh/">1. navmesh</a></li>
+      <li><a href="02_tiled_and_player/">2. tiled and player</a></li>
     </ul>
   </body>
 </html>
