--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="01_navmesh/">1. navmesh</a></li>
       <li><a href="02_tiled_and_player/">2. tiled and player</a></li>
+      <li><a href="03_fog_of_field/">3. fog of field</a></li>
     </ul>
   </body>
 </html>
