--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <li><a href="01_navmesh/">1. navmesh</a></li>
       <li><a href="02_tiled_and_player/">2. tiled and player</a></li>
       <li><a href="03_fog_of_field/">3. fog of field</a></li>
+      <li><a href="04_speech_bubble/">4. speech bubble</a></li>
     </ul>
   </body>
 </html>
