move by mouse click

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <li><a href="02_tiled_and_player/">2. tiled and player</a></li>
       <li><a href="03_fog_of_field/">3. fog of field</a></li>
       <li><a href="04_speech_bubble/">4. speech bubble</a></li>
+      <li><a href="05_click_move/">5. click move</a></li>
     </ul>
   </body>
 </html>
